<resources>
    <string name="app_name">AP2_Project</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgotPassword"><u>Forgot Password</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="sign_up_underline"><u>Sign up</u></string>
    <string name="sign_up">Sign up</string>
    <string name="back">Back</string>
    <string name="achievementTitle">Achievement Title</string>
    <string name="achievementDesc">Achievement Description</string>
    <string name="complete">Complete</string>
    <string name="incomplete">Incomplete</string>
    <string name="delete_account"><u>Delete Account</u></string>
    <string name="delete">Delete</string>
    <string name="unfollow">Unfollow</string>
    <string name="friends_list">Friends List</string>
    <string name="users_list">Users List</string>
    <string name="remove">Remove</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure you’d like to remove this?</string>
    <string name="are_you_sure_unfollow">Are you sure you’d like to unfollow this user?</string>
    <string name="are_you_sure_delete">Are you sure you’d like to delete this user?</string>
    <string name="delete_account_warning">Are you sure you’d like to delete your information?</string>
    <string name="home_header"><b>USERNAME</b> has achieved this week!</string>
    <string name="home_header_date">20/08/2022</string>
    <string name="last_30_days">Friend\'s Latest Achievements</string>

</resources>