<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:outlineProvider="none"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/inter"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="280dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_text_box"
        android:fontFamily="@font/inter"
        android:padding="5dip" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/inter"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="280dp"
        android:layout_height="33dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rounded_text_box"
        android:fontFamily="@font/inter"
        android:padding="5dip" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="280dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:fontFamily="@font/inter"
        android:text="@string/login"
        app:backgroundTint="@null" />

    <View
        android:layout_width="240dp"
        android:layout_height="2dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="#BF000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/inter"
            android:text="New user?"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/loginsignup_signup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/inter"
            android:text="@string/sign_up_underline"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>

</LinearLayout>