<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/screen_background_dark_transparent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        app:cardBackgroundColor="@color/purple_200"
        app:cardCornerRadius="15dp"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="260dp"
            android:layout_height="147dp"
            android:background="#E6FFFFFF">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="218dp"
                android:layout_height="58dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/are_you_sure_delete"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="250dp"
                android:layout_height="81dp"
                android:layout_marginStart="26dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="79dp"
                android:fontFamily="@font/inter"
                android:text="@string/achievementDesc"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:layout_width="260dp"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDeleteNo"
                    android:layout_width="81dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="24dp"
                    android:background="@drawable/button_increment"
                    android:text="@string/no"
                    android:textColor="@color/button_blue"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDeleteYes"
                    android:layout_width="81dp"
                    android:layout_height="35dp"
                    android:background="@drawable/delete_button"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>